--- a/styles/style.css
+++ b/styles/style.css
@@ -114,6 +114,7 @@ width: 100%;
  position:static;
  margin-bottom: 16px; 
  object-fit:contain;
+ width: 711px;
  /* в конце по ПП задай размеры*/
 }
 
@@ -182,6 +183,7 @@ flex-direction: column;
 }
 
 .content__video-card-title{
+  display: inline-block;
   font-family: "Oswald", sans-serif;
   font-weight: 700;
   font-style: bold;
@@ -190,8 +192,11 @@ flex-direction: column;
   letter-spacing: 100%;
   text-transform: uppercase;
   color: white;
-  /* учтите возможность переполнения, 
-  заменяя излишний текст на “…”. доделай*/
+   display: -webkit-box;
+  -webkit-line-clamp: 1; /*ограничение количества строк*/
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .content__video-card-description{
@@ -236,6 +241,7 @@ flex-direction: column;
   align-items: center;
   width: fit-content;
   gap: 7px; /*ПП*/
+  cursor: pointer;
 }
 
 input{
@@ -289,6 +295,7 @@ font-style: bold;
 font-size: 18px;
 line-height: 100%;
 background-color: transparent;
+cursor: pointer;
 }
 
 .search-form__submit-button{
@@ -320,3 +327,37 @@ width: 100%; /*ширина?? 100%?*/
 }
 
 /*6 ШАГ*/
+.content__card-link{
+  display: block;
+}
+
+.content__card-link_current{
+  background-color: grey; /*не грэй*/
+}
+
+.content__card-link:active{
+  background-color:grey;
+}
+
+.content__card-link:focus{
+outline: none;
+}
+
+.content__card-link:focus-visible{
+  outline: 1px solid white;
+}
+
+.content__list-item{
+  padding-left: 3px;
+  padding-right: 3px;
+}
+
+/*7 ШАГ сделано*/
+
+/*8 ШАГ*/
+
+.result__video-container, .content__list-container{
+ position: relative;
+}
+
+
