--- a/styles/style.css
+++ b/styles/style.css
@@ -58,7 +58,6 @@ ol {
 display:flex;
 flex-direction: column;
 width: 711px;
-gap: 16px ;
 flex-shrink: 0;
 }
 
@@ -66,7 +65,7 @@ flex-shrink: 0;
   display: flex;
   flex-direction: column;
   width: 400px;
-  gap: 26px;
+  gap: 16px;
   flex-shrink: 0; /* запрет на уменьшение*/
 }
 
@@ -211,8 +210,8 @@ flex-direction: column;
   line-height: 16.2%;
   letter-spacing: 0%;
   color: white;
-  gap: 6px;
-  padding-top: 9px;
+  gap: 5px;
+  padding-top: 13px;
   height: 73px;
   display: -webkit-box;
   -webkit-line-clamp: 1; /*ограничение количества строк*/
@@ -223,9 +222,7 @@ flex-direction: column;
 
 /*4 ШАГ*/
 
-.search-form__textfield{
-  width: 194px;
-}
+
 
 .visually-hidden {
   position: absolute;
@@ -239,22 +236,25 @@ flex-direction: column;
 
 .search-form__checkbox-list{
   display: flex;
-  gap: 17px;
+  gap: 13px;
 }
 
 .search-form__fieldset{
   display: flex;
   flex-direction: column;
-  padding-left: 17px;
+
   gap: 5px;
   border: none;
+
+
 }
 
 .search-form__label{
   display: flex;
   flex-direction: row;
   align-items: center;
-  width: fit-content;
+ /* width: fit-content;*/
+  width: 100%;
   gap: 7px; /*ПП*/
   cursor: pointer;
 }
@@ -271,6 +271,10 @@ input{
   height: 27px;
   appearance: none;
   background-color: transparent;
+}
+
+.search-form__textfield{
+font-size: 16.5px;
 }
 
 .search-form__textfield::placeholder{
