--- a/styles/style.css
+++ b/styles/style.css
@@ -41,8 +41,6 @@ ol {
   list-style: none;
 }
 
-/*доделать:
-
 /*1 ШАГ*/ 
 
 .content {
@@ -66,7 +64,7 @@ flex-shrink: 0;
   flex-direction: column;
   width: 400px;
   gap: 16px;
-  flex-shrink: 0; /* запрет на уменьшение*/
+  flex-shrink: 0; 
 }
 
 .search-form{
@@ -75,8 +73,7 @@ flex-shrink: 0;
   justify-content: space-between;
   align-items: flex-start;
   width: 100%;
-  gap: 26px; /*двигаем кнопку найти*/
-  
+  gap: 26px; 
 }
 
 .more-button{
@@ -93,7 +90,6 @@ min-height: 34px;
   overflow-y: auto;
   height: 298px;
   flex-shrink: 0;
-  /*мб отступы*/
 }
 
 .result__video {
@@ -101,7 +97,6 @@ min-height: 34px;
   height: 100%;
 }
 
-/* Кастомный скроллбар, последующие 3 эл НЕ ТРОГАТЬ!!*/
 .custom-scrollbar::-webkit-scrollbar {
   width: 4px;
 }
@@ -113,30 +108,24 @@ min-height: 34px;
 .custom-scrollbar::-webkit-scrollbar-thumb {
   background-color: #D9D9D9;
 }
-/*после можно*/
 
 /* 2 ШАГ*/
 
 .result__video-container{
 object-fit: contain;
  position:relative;
- /* margin-bottom: 16px;  */ 
  width: 100%;
- /* в конце по ПП задай размеры*/
 }
 
 .content__list{ 
 gap: 30px;
 display: flex;
 flex-direction: column;
-
 }
 
 .content__list-item{
   width: 100%;
-  /* padding: 30px; */
 }
-
 
 .content__video-card{
   display: flex;
@@ -158,8 +147,8 @@ flex-direction: column;
   min-width: 0;
 }
 
-
 /*3 ШАГ*/
+
 .search-form__fieldset-title{
   font-family: "Fira Sans Condensed", sans-serif;
   font-weight: 400;
@@ -196,7 +185,7 @@ flex-direction: column;
   text-transform: uppercase;
   color: white;
    display: -webkit-box;
-  -webkit-line-clamp: 1; /*ограничение количества строк*/
+  -webkit-line-clamp: 1; 
   -webkit-box-orient: vertical;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -214,15 +203,13 @@ flex-direction: column;
   padding-top: 13px;
   height: 73px;
   display: -webkit-box;
-  -webkit-line-clamp: 1; /*ограничение количества строк*/
+  -webkit-line-clamp: 1; 
   -webkit-box-orient: vertical;
   overflow: hidden;
   text-overflow: ellipsis;
 }
 
 /*4 ШАГ*/
-
-
 
 .visually-hidden {
   position: absolute;
@@ -242,20 +229,16 @@ flex-direction: column;
 .search-form__fieldset{
   display: flex;
   flex-direction: column;
-
   gap: 5px;
   border: none;
-
-
 }
 
 .search-form__label{
   display: flex;
   flex-direction: row;
   align-items: center;
- /* width: fit-content;*/
   width: 100%;
-  gap: 7px; /*ПП*/
+  gap: 7px; 
   cursor: pointer;
 }
 
@@ -346,6 +329,7 @@ height: 34px;
 }
 
 /*6 ШАГ*/
+
 .content__card-link{
   display: block;
 }
@@ -375,15 +359,4 @@ outline: none;
  position: relative;
 }
 
-.placeholder{
-/*position: absolute;
-display: flex;
-justify-content: center;
-align-items: center;
-top:0;
-left: 0;
-width: 100%;
-height: 100%;*/
-
-}
 
