--- a/styles/style.css
+++ b/styles/style.css
@@ -17,7 +17,7 @@ html {
   block-size: 100%;
   margin: auto;
   color: #fff;
-  font-family: 'Fira Sans Condensed', sans-serif;
+  font-family: "Fira Sans Condensed", sans-serif;
   font-size: 18px;
   background-color: #1b1919;
 }
@@ -41,47 +41,47 @@ ol {
   list-style: none;
 }
 
-/*1 ШАГ*/ 
+/*1 ШАГ*/
 
 .content {
   display: flex;
-  align-items:flex-end;
+  align-items: flex-end;
   flex-direction: row;
   width: 1140px;
   margin: auto;
-  gap: 30px;  
+  gap: 30px;
 }
 
 .result {
-display:flex;
-flex-direction: column;
-width: 711px;
-flex-shrink: 0;
+  display: flex;
+  flex-direction: column;
+  width: 711px;
+  flex-shrink: 0;
 }
 
-.content__details{
+.content__details {
   display: flex;
   flex-direction: column;
   width: 400px;
   gap: 16px;
-  flex-shrink: 0; 
+  flex-shrink: 0;
 }
 
-.search-form{
+.search-form {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: flex-start;
   width: 100%;
-  gap: 26px; 
+  gap: 26px;
 }
 
-.more-button{
-min-width: 390px;
-min-height: 34px;
+.more-button {
+  min-width: 390px;
+  min-height: 34px;
 }
 
-.content__list-container{
+.content__list-container {
   position: relative;
   display: flex;
   flex-direction: column;
@@ -106,57 +106,57 @@ min-height: 34px;
 }
 
 .custom-scrollbar::-webkit-scrollbar-thumb {
-  background-color: #D9D9D9;
+  background-color: #d9d9d9;
 }
 
 /* 2 ШАГ*/
 
-.result__video-container{
-object-fit: contain;
- position:relative;
- width: 100%;
-}
-
-.content__list{ 
-gap: 30px;
-display: flex;
-flex-direction: column;
-}
-
-.content__list-item{
+.result__video-container {
+  object-fit: contain;
+  position: relative;
   width: 100%;
 }
 
-.content__video-card{
+.content__list {
+  gap: 30px;
+  display: flex;
+  flex-direction: column;
+}
+
+.content__list-item {
+  width: 100%;
+}
+
+.content__video-card {
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
   width: 100%;
 }
 
-.content__video-card-thumbnail{
+.content__video-card-thumbnail {
   object-fit: cover;
-  object-position:center;
+  object-position: center;
   width: 194px;
   height: 103px;
   flex-shrink: 0;
 }
 
-.content__video-card-description-container{
+.content__video-card-description-container {
   flex-grow: 1;
   min-width: 0;
 }
 
 /*3 ШАГ*/
 
-.search-form__fieldset-title{
+.search-form__fieldset-title {
   font-family: "Fira Sans Condensed", sans-serif;
   font-weight: 400;
   line-height: 100%;
   font-size: 18px;
 }
 
-.title{
+.title {
   font-weight: 700;
   font-size: 75px;
   line-height: 94%;
@@ -165,16 +165,16 @@ flex-direction: column;
   font-family: "Oswald", sans-serif;
 }
 
-.content__accent{
+.content__accent {
   color: grey;
 }
 
-.content__card-link{
+.content__card-link {
   color: white;
   text-decoration: none;
 }
 
-.content__video-card-title{
+.content__video-card-title {
   display: inline-block;
   font-family: "Oswald", sans-serif;
   font-weight: 700;
@@ -184,15 +184,15 @@ flex-direction: column;
   letter-spacing: 100%;
   text-transform: uppercase;
   color: white;
-   display: -webkit-box;
-  -webkit-line-clamp: 1; 
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
   -webkit-box-orient: vertical;
   overflow: hidden;
   text-overflow: ellipsis;
 }
 
-.content__video-card-description{
-  display: inline-block;    
+.content__video-card-description {
+  display: inline-block;
   font-family: "Fira Sans Condensed", sans-serif;
   font-weight: 400;
   font-size: 18px;
@@ -203,7 +203,7 @@ flex-direction: column;
   padding-top: 13px;
   height: 73px;
   display: -webkit-box;
-  -webkit-line-clamp: 1; 
+  -webkit-line-clamp: 1;
   -webkit-box-orient: vertical;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -221,28 +221,28 @@ flex-direction: column;
   white-space: nowrap;
 }
 
-.search-form__checkbox-list{
+.search-form__checkbox-list {
   display: flex;
   gap: 13px;
 }
 
-.search-form__fieldset{
+.search-form__fieldset {
   display: flex;
   flex-direction: column;
   gap: 5px;
   border: none;
 }
 
-.search-form__label{
+.search-form__label {
   display: flex;
   flex-direction: row;
   align-items: center;
   width: 100%;
-  gap: 7px; 
+  gap: 7px;
   cursor: pointer;
 }
 
-input{
+input {
   font-family: "Horizontal", sans-serif;
   font-size: 18px;
   font-weight: 400;
@@ -256,31 +256,31 @@ input{
   background-color: transparent;
 }
 
-.search-form__textfield{
-font-size: 16.5px;
+.search-form__textfield {
+  font-size: 16.5px;
 }
 
-.search-form__textfield::placeholder{
- color: rgb(255 255 255 / 0.7);
+.search-form__textfield::placeholder {
+  color: rgb(255 255 255 / 0.7);
 }
-.search-form__textfield:focus{
+.search-form__textfield:focus {
   outline: none;
 }
 
-.search-form__label:has(:focus-visible){
+.search-form__label:has(:focus-visible) {
   outline: 1px solid white;
   outline-offset: 2px;
 }
 
-.search-form__pseudo-checkbox{
+.search-form__pseudo-checkbox {
   border: 1px solid white;
   width: 19px;
   height: 19px;
   padding: 1px;
 }
 
-.search-form__pseudo-checkbox::after{
-  content: '';
+.search-form__pseudo-checkbox::after {
+  content: "";
   display: block;
   background-color: white;
   width: 100%;
@@ -294,59 +294,59 @@ font-size: 16.5px;
 
 /*5 ШАГ*/
 
-.button{
-border: 1px solid white;
-color: white;
-font-family: "Fira Sans Condensed", sans-serif;
-font-weight: 700px;
-font-style: bold;
-font-size: 18px;
-line-height: 100%;
-background-color: transparent;
-cursor: pointer;
+.button {
+  border: 1px solid white;
+  color: white;
+  font-family: "Fira Sans Condensed", sans-serif;
+  font-weight: 700px;
+  font-style: bold;
+  font-size: 18px;
+  line-height: 100%;
+  background-color: transparent;
+  cursor: pointer;
 }
 
-.search-form__submit-button{
-align-self: flex-end;
-width: 194px;
-height: 34px;
+.search-form__submit-button {
+  align-self: flex-end;
+  width: 194px;
+  height: 34px;
 }
 
-.button:hover{
+.button:hover {
   text-decoration: underline;
 }
 
-.button:active{
+.button:active {
   background-color: grey;
 }
 
-.button:focus{
+.button:focus {
   outline: none;
 }
 
-.button:focus-visible{
+.button:focus-visible {
   outline: 1px solid white;
 }
 
 /*6 ШАГ*/
 
-.content__card-link{
+.content__card-link {
   display: block;
 }
 
-.content__card-link:active{
-  background-color:grey;
+.content__card-link:active {
+  background-color: grey;
 }
 
-.content__card-link:focus{
-outline: none;
+.content__card-link:focus {
+  outline: none;
 }
 
-.content__card-link:focus-visible{
+.content__card-link:focus-visible {
   outline: 1px solid white;
 }
 
-.content__list-item{
+.content__list-item {
   padding-left: 3px;
   padding-right: 3px;
 }
@@ -355,8 +355,6 @@ outline: none;
 
 /*8 ШАГ*/
 
- .content__list-container{
- position: relative;
+.content__list-container {
+  position: relative;
 }
-
-
