--- a/styles/style.css
+++ b/styles/style.css
@@ -63,7 +63,7 @@ ol {
   display: flex;
   flex-direction: column;
   width: 400px;
-  gap: 20px;
+  gap: 26px;
   flex-shrink: 0;
 }
 
@@ -165,7 +165,7 @@ ol {
 }
 
 .content__accent {
-  color: grey;
+  color: rgba(84, 80, 80, 1);
 }
 
 .content__card-link {
@@ -174,7 +174,6 @@ ol {
 }
 
 .content__video-card-title {
-  display: inline-block;
   font-family: "Oswald", sans-serif;
   font-weight: 700;
   font-size: 30px;
@@ -189,15 +188,12 @@ ol {
 }
 
 .content__video-card-description {
-  display: inline-block;
   font-family: "Fira Sans Condensed", sans-serif;
   font-weight: 400;
   font-size: 18px;
-  line-height: 16.2%;
+  line-height: 16.2px;
   color: white;
-  gap: 5px;
-  padding-top: 13px;
-  height: 73px;
+  margin-top: 5px;
   display: -webkit-box;
   -webkit-line-clamp: 1;
   -webkit-box-orient: vertical;
@@ -239,7 +235,7 @@ ol {
 }
 
 input {
-  font-family: "Horizontal", sans-serif;
+  font-family: inherit, sans-serif;
   font-size: 18px;
   font-weight: 400;
   border: none;
@@ -288,6 +284,14 @@ input {
   opacity: 1;
 }
 
+.search-form__label:hover {
+  text-decoration: underline;
+}
+
+.content__video-card:hover {
+  text-decoration: underline;
+}
+
 /*5 ШАГ*/
 
 .button {
@@ -312,7 +316,7 @@ input {
 }
 
 .button:active {
-  background-color: grey;
+  background-color: rgba(84, 80, 80, 1);
 }
 
 .button:focus {
@@ -329,8 +333,12 @@ input {
   display: block;
 }
 
+.content__card-link_current {
+  background-color: #545050;
+}
+
 .content__card-link:active {
-  background-color: grey;
+  background-color: rgba(84, 80, 80, 1);
 }
 
 .content__card-link:focus {
